edited home page
edited home page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Oct 23 2019 23:19:38 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Oct 23 2019 23:43:03 GMT+0000 (UTC)  -->
 <html data-wf-page="5d9fb960718dbeb52b3319e1" data-wf-site="5d9fb95f718dbea7ec3319d9">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
           <div id="social-ig" class="column-6 w-col w-col-3 w-col-small-3 w-col-tiny-3"><a href="https://www.instagram.com/zc.vhs/" target="_blank" class="w-inline-block"><img src="images/iconfinder_instagram_3649761.png" width="40" alt="email-logo"></a></div>
           <div class="column-7 w-col w-col-3 w-col-small-3 w-col-tiny-3"><a href="mailto:hi@hellozach.com?subject=hi%2C%20Zach!" class="w-inline-block"><img src="images/iconfinder_telegram_3649750.png" width="40" alt=""></a></div>
         </div>
-        <p class="footer-paragraph">cloned on webflow from <a href="https://webflow.com/Arthur" target="_blank" class="link">Arthur James</a></p>
+        <p class="footer-paragraph"></p>
       </div>
     </div>
   </div>
